// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`IconButton snapshot > sizes > matches snapshot with LG size 1`] = `
<div>
  <button
    aria-label="Large action"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-27dej5-MuiButtonBase-root-MuiIconButton-root"
    tabindex="0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
      data-testid="AddIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
      />
    </svg>
  </button>
</div>
`;

exports[`IconButton snapshot > sizes > matches snapshot with MD size 1`] = `
<div>
  <button
    aria-label="Medium action"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1bahqyw-MuiButtonBase-root-MuiIconButton-root"
    tabindex="0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
      data-testid="AddIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
      />
    </svg>
  </button>
</div>
`;

exports[`IconButton snapshot > sizes > matches snapshot with SM size 1`] = `
<div>
  <button
    aria-label="Small action"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-mld49f-MuiButtonBase-root-MuiIconButton-root"
    tabindex="0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
      data-testid="AddIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
      />
    </svg>
  </button>
</div>
`;

exports[`IconButton snapshot > sizes > matches snapshot with XL size 1`] = `
<div>
  <button
    aria-label="Extra large action"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-32db65-MuiButtonBase-root-MuiIconButton-root"
    tabindex="0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
      data-testid="AddIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
      />
    </svg>
  </button>
</div>
`;

exports[`IconButton snapshot > sizes > matches snapshot with XS size 1`] = `
<div>
  <button
    aria-label="Extra small action"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-3f7cy1-MuiButtonBase-root-MuiIconButton-root"
    tabindex="0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
      data-testid="AddIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
      />
    </svg>
  </button>
</div>
`;

exports[`IconButton snapshot > states > matches snapshot when disabled 1`] = `
<div>
  <button
    aria-label="Disabled action"
    class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-1bahqyw-MuiButtonBase-root-MuiIconButton-root"
    disabled=""
    tabindex="-1"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
      data-testid="AddIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
      />
    </svg>
  </button>
</div>
`;

exports[`IconButton snapshot > states > matches snapshot when loading 1`] = `
<div>
  <button
    aria-label="Loading action"
    class="MuiButtonBase-root Mui-disabled MuiIconButton-root MuiIconButton-loading Mui-disabled MuiIconButton-sizeMedium css-1bahqyw-MuiButtonBase-root-MuiIconButton-root"
    disabled=""
    id="_r_v_"
    tabindex="-1"
    type="button"
  >
    <span
      class="MuiIconButton-loadingWrapper"
      style="display: contents;"
    >
      <span
        class="MuiIconButton-loadingIndicator css-cg89ja-MuiIconButton-loadingIndicator"
      >
        <span
          aria-labelledby="_r_v_"
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorInherit css-gxw4l9-MuiCircularProgress-root"
          role="progressbar"
          style="width: 16px; height: 16px;"
        >
          <svg
            class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle css-19t5dcl-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </span>
      </span>
    </span>
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
      data-testid="AddIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
      />
    </svg>
  </button>
</div>
`;

exports[`IconButton snapshot > variants > matches snapshot with alphaDark variant 1`] = `
<div>
  <button
    aria-label="Alpha dark action"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-t7cf8k-MuiButtonBase-root-MuiIconButton-root"
    tabindex="0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
      data-testid="CloseIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </button>
</div>
`;

exports[`IconButton snapshot > variants > matches snapshot with alphaLight variant 1`] = `
<div>
  <button
    aria-label="Alpha light action"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1rw1ge6-MuiButtonBase-root-MuiIconButton-root"
    tabindex="0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
      data-testid="SearchIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14"
      />
    </svg>
  </button>
</div>
`;

exports[`IconButton snapshot > variants > matches snapshot with borderless variant 1`] = `
<div>
  <button
    aria-label="Borderless action"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-12p7hp4-MuiButtonBase-root-MuiIconButton-root"
    tabindex="0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
      data-testid="AddIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
      />
    </svg>
  </button>
</div>
`;

exports[`IconButton snapshot > variants > matches snapshot with default variant 1`] = `
<div>
  <button
    aria-label="Default action"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1yia4uv-MuiButtonBase-root-MuiIconButton-root"
    tabindex="0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
      data-testid="AddIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
      />
    </svg>
  </button>
</div>
`;

exports[`IconButton snapshot > variants > matches snapshot with disabled variant 1`] = `
<div>
  <button
    aria-label="Disabled action"
    class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-1qihtc3-MuiButtonBase-root-MuiIconButton-root"
    disabled=""
    tabindex="-1"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
      data-testid="AddIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
      />
    </svg>
  </button>
</div>
`;

exports[`IconButton snapshot > variants > matches snapshot with lightBorder variant 1`] = `
<div>
  <button
    aria-label="Light border action"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1aowtae-MuiButtonBase-root-MuiIconButton-root"
    tabindex="0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
      data-testid="AddIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
      />
    </svg>
  </button>
</div>
`;

exports[`IconButton snapshot > variants > matches snapshot with primary variant 1`] = `
<div>
  <button
    aria-label="Primary action"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1bahqyw-MuiButtonBase-root-MuiIconButton-root"
    tabindex="0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
      data-testid="AddIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
      />
    </svg>
  </button>
</div>
`;

exports[`IconButton snapshot > variants > matches snapshot with secondary variant 1`] = `
<div>
  <button
    aria-label="Secondary action"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-rxe26n-MuiButtonBase-root-MuiIconButton-root"
    tabindex="0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
      data-testid="SettingsIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19.14 12.94c.04-.3.06-.61.06-.94 0-.32-.02-.64-.07-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.05.3-.09.63-.09.94s.02.64.07.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6"
      />
    </svg>
  </button>
</div>
`;

exports[`IconButton snapshot > variants > matches snapshot with success variant 1`] = `
<div>
  <button
    aria-label="Success action"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-xxr1hy-MuiButtonBase-root-MuiIconButton-root"
    tabindex="0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
      data-testid="AddIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
      />
    </svg>
  </button>
</div>
`;
